--- a/assets/src/scss/layout/public/search-home.scss
+++ b/assets/src/scss/layout/public/search-home.scss
@@ -24,12 +24,6 @@
   z-index: 2;
 }
 
-.search-category-changed {
-  .directorist-advanced-filter {
-    display: none;
-  }
-}
-
 // Search Border Boder
 .directorist-search-form-wrap {
   &.directorist-with-search-border {
